<resources>
    <string name="app_name">Test App Effective Mobile</string>

    <string-array name="location">
        <item>Zihuatanejo, Gro</item>
    </string-array>
    <string-array name="brands">
        <item>Samsung</item>
    </string-array>
    <string-array name="prise">
        <item>$300 - $500</item>
        <item>$500 - $1000</item>
        <item>$1000 - $3000</item>
        <item>$3000 - $5000</item>
        <item>$5000 - $10000</item>
    </string-array>
    <string-array name="size_filter">
        <item>4.5 to 5.5 inches</item>
    </string-array>

    <string name="select_category">Select Category</string>
    <string name="phones">Phones</string>
    <string name="computer">Computer</string>
    <string name="health">Health</string>
    <string name="books">Books</string>
    <string name="search">Search</string>
    <string name="hot_sales">Hot sales</string>
    <string name="see_more">see more</string>
    <string name="buy_now">Buy now!</string>
    <string name="new_main">New</string>
    <string name="best_seller">Best Seller</string>
    <string name="explorer">Explorer</string>
    <string name="filter_options">Filter options</string>
    <string name="brand">Brand</string>
    <string name="price">Price</string>
    <string name="size">Size</string>
    <string name="done">Done</string>
    <string name="view_all">view all</string>

    <string name="product_details">Product Details</string>
    <string name="shop">Shop</string>
    <string name="details">Details</string>
    <string name="features">Features</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="dollar">$</string>
    <string name="select_color_and_capacity">Select color and capacity</string>

    <string name="add_address">Add address</string>
    <string name="my_cart">My Cart</string>
    <string name="total">Total</string>
    <string name="delivery">Delivery</string>
    <string name="checkout">Checkout</string>

</resources>