<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="mainViewModel"
            type="com.example.testappeffectivemobile.main.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_background">

        <Spinner
            android:id="@+id/locate_spinner"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="20dp"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="193dp"
            android:layout_height="32dp"
            android:layout_marginStart="17dp"
            android:layout_marginTop="18dp"
            android:text="@string/select_category"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locate_spinner" />

        <TextView
            android:id="@+id/text_view_view_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="33dp"
            android:text="@string/view_all"
            android:textColor="@color/orange"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locate_spinner" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/locate_spinner"
            app:layout_constraintEnd_toStartOf="@+id/locate_spinner"
            app:layout_constraintTop_toTopOf="@+id/locate_spinner"
            app:srcCompat="@mipmap/location_foreground" />

        <ImageView
            android:id="@+id/filter_button"
            android:layout_width="13dp"
            android:layout_height="13dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="35dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/locate_spinner"
            app:srcCompat="@mipmap/filter_foreground" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/select_category_recycle_view"
            android:layout_width="match_parent"
            android:layout_height="94dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <SearchView
            android:id="@+id/searchView"
            android:layout_width="300dp"
            android:layout_height="34dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="34dp"
            android:background="@drawable/search_view_backgroung"
            android:searchIcon="@drawable/search"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/select_category_recycle_view" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_marginStart="11dp"
            android:layout_marginEnd="37dp"
            android:background="@drawable/item_select_category_select"
            app:layout_constraintBottom_toBottomOf="@+id/searchView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/searchView"
            app:layout_constraintTop_toTopOf="@+id/searchView"
            app:srcCompat="@drawable/main_qr" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginTop="24dp"
            android:text="@string/hot_sales"
            android:textColor="@color/blue"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchView" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/invisible"
            android:padding="0dp"
            android:text="@string/see_more"
            android:textColor="@color/orange"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView3" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/hot_seller_recycle_view"
            android:layout_width="match_parent"
            android:layout_height="182dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="21dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/item_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginTop="11dp"
            android:text="@string/best_seller"
            android:textColor="@color/blue"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hot_seller_recycle_view" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/best_seller_recycle_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="18dp"
            app:layout_constraintBottom_toTopOf="@+id/view2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_title_text_view"
            app:layout_constraintVertical_bias="0.0" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="@drawable/explorer_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:background="@color/invisible"
            app:layout_constraintBottom_toBottomOf="@+id/view2"
            app:layout_constraintStart_toEndOf="@+id/imageButton4"
            app:layout_constraintTop_toTopOf="@+id/view2"
            app:srcCompat="@drawable/vectorlike_white" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/explorer"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/view2" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginStart="68dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/view2"
            app:layout_constraintTop_toTopOf="@+id/view2"
            app:srcCompat="@drawable/item_select_category" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="46dp"
            android:background="@color/invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toTopOf="@+id/view2"
            app:srcCompat="@drawable/vectorcart" />

        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:background="@color/invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageButton3"
            app:layout_constraintTop_toTopOf="@+id/view2"
            app:srcCompat="@drawable/vectorhuman" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/filter_options_conteiner"
            android:layout_width="match_parent"
            android:layout_height="375dp"
            android:background="@drawable/filter_background"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageButton
                android:id="@+id/close_filter_button"
                android:layout_width="37dp"
                android:layout_height="37dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/filter_close_background"
                android:src="@drawable/vector_cross"
                app:layout_constraintStart_toStartOf="@+id/brand_filter_spinner"
                app:layout_constraintTop_toTopOf="@+id/filter_options_conteiner" />

            <Button
                android:id="@+id/done_button"
                android:layout_width="86dp"
                android:layout_height="37dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/filter_done_background"
                android:padding="0dp"
                android:text="@string/done"
                android:textAllCaps="false"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/close_filter_button" />

            <TextView
                android:id="@+id/title_filter_options_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="31dp"
                android:text="@string/filter_options"
                android:textColor="@color/blue"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/done_button"
                app:layout_constraintHorizontal_bias="0.56"
                app:layout_constraintStart_toEndOf="@+id/close_filter_button"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/brand_filter_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/brand"
                android:textColor="@color/blue"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/brand_filter_spinner"
                app:layout_constraintTop_toBottomOf="@+id/close_filter_button" />

            <Spinner
                android:id="@+id/brand_filter_spinner"
                android:layout_width="337dp"
                android:layout_height="37dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/filter_spiner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/brand_filter_textview" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/price"
                android:textColor="@color/blue"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/prise_filter_spinner"
                app:layout_constraintTop_toBottomOf="@+id/brand_filter_spinner" />

            <Spinner
                android:id="@+id/prise_filter_spinner"
                android:layout_width="337dp"
                android:layout_height="37dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/filter_spiner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <Spinner
                android:id="@+id/size_filter_spinner"
                android:layout_width="337dp"
                android:layout_height="37dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/filter_spiner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/size"
                android:textColor="@color/blue"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/size_filter_spinner"
                app:layout_constraintTop_toBottomOf="@+id/prise_filter_spinner" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>