<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="cartViewModel"
            type="com.example.testappeffectivemobile.cart.CartViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_background">

        <ImageButton
            android:id="@+id/cart_back_button"
            android:layout_width="37dp"
            android:layout_height="37dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/filter_close_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/vectorarrowleft" />

        <ImageButton
            android:id="@+id/imageButton6"
            android:layout_width="37dp"
            android:layout_height="37dp"
            android:layout_marginEnd="46dp"
            android:background="@drawable/filter_done_background"
            app:layout_constraintBottom_toBottomOf="@+id/cart_back_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cart_back_button"
            app:srcCompat="@drawable/grouplocation" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/add_address"
            android:textColor="@color/blue"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton6"
            app:layout_constraintEnd_toStartOf="@+id/imageButton6"
            app:layout_constraintTop_toTopOf="@+id/imageButton6" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="42dp"
            android:layout_marginTop="40dp"
            android:text="@string/my_cart"
            android:textColor="@color/blue"
            android:textSize="35sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cart_back_button" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/cart_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/item_cart_recycle_view"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="64dp"
                app:layout_constraintBottom_toTopOf="@+id/imageView8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="27dp"
                app:layout_constraintBottom_toTopOf="@+id/checkout_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/line_6" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="91dp"
                app:layout_constraintBottom_toTopOf="@+id/imageView7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/line_6" />

            <Button
                android:id="@+id/checkout_button"
                android:layout_width="326dp"
                android:layout_height="54dp"
                android:layout_marginStart="44dp"
                android:layout_marginEnd="44dp"
                android:layout_marginBottom="44dp"
                android:background="@drawable/filter_done_background"
                android:text="@string/checkout"
                android:textAllCaps="false"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:layout_marginBottom="26dp"
                android:text="@string/delivery"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@+id/imageView7"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/total"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@+id/textView10"
                app:layout_constraintStart_toStartOf="@+id/textView10" />

            <TextView
                android:id="@+id/total_prise_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="215dp"
                android:layout_marginBottom="12dp"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@+id/delivery_text_view"
                app:layout_constraintStart_toEndOf="@+id/textView11" />

            <TextView
                android:id="@+id/delivery_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="26dp"
                android:text="@{cartViewModel.cartModel.delivery}"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@+id/imageView7"
                app:layout_constraintStart_toStartOf="@+id/total_prise_text_view" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>